--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "bad-words": "^3.0.2",
     "express": "^4.17.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "workbox-sw": "^5.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
